feat(server): add basicAuth start to openapi
